parser.output
Terminals unused in grammar

   NUMBER
   COLON
   MUESTRALINEASYM
   CARACTERSYM
   GRANENTEROSYM
   ARREGLOSYM
   MATRIZSYM
   FALSOSYM
   VERDADEROSYM


Estado 73 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 74 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 126 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 127 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 128 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 135 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 160 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 164 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 178 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 181 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 182 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 185 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 198 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 199 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 200 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 201 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 213 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 234 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: Librerias Objetos Funciones Main

    2 Objetos: Objeto

    3 $@1: /* vacío */

    4 Objeto: OBJETOSYM IDENTIFICADOR $@1 LCURLY AtributosPrivados AtributosPublicos RCURLY SEMICOLON

    5 AtributosPrivados: PRIVADOSYM LCURLY VariablesObjetos Funciones RCURLY
    6                  | epsilon

    7 AtributosPublicos: PUBLICOSYM LCURLY Variables FuncionesObjetos RCURLY
    8                  | epsilon

    9 Librerias: Libreria Libreria1

   10 Libreria: INCLUIRSYM LSS IDENTIFICADOR GTR

   11 Libreria1: Libreria
   12          | /* vacío */

   13 Funciones: Funcion

   14 FuncionesObjetos: FuncionObjeto

   15 $@2: /* vacío */

   16 $@3: /* vacío */

   17 $@4: /* vacío */

   18 Funcion: FUNCIONSYM Tipo $@2 IDENTIFICADOR $@3 Params BloqueFuncion SEMICOLON $@4 Funcion
   19        | epsilon

   20 $@5: /* vacío */

   21 $@6: /* vacío */

   22 $@7: /* vacío */

   23 FuncionObjeto: FUNCIONSYM Tipo $@5 IDENTIFICADOR $@6 ParamsObjeto BloqueFuncion SEMICOLON $@7 FuncionObjeto
   24              | epsilon

   25 Tipo: ENTEROSYM
   26     | DECIMALSYM
   27     | TEXTOSYM
   28     | BANDERASYM
   29     | IDENTIFICADOR

   30 Params: LPAREN Param RPAREN

   31 ParamsObjeto: LPAREN ParamObjeto RPAREN

   32 $@8: /* vacío */

   33 $@9: /* vacío */

   34 Param: Tipo $@8 IDENTIFICADOR $@9 Param1
   35      | epsilon

   36 Param1: COMMA Param
   37       | epsilon

   38 $@10: /* vacío */

   39 $@11: /* vacío */

   40 ParamObjeto: Tipo $@10 IDENTIFICADOR $@11 ParamObjeto1
   41            | epsilon

   42 ParamObjeto1: COMMA ParamObjeto
   43             | epsilon

   44 $@12: /* vacío */

   45 Args: Expresion $@12 Args1
   46     | epsilon

   47 $@13: /* vacío */

   48 Args1: COMMA Expresion $@13 Args1
   49      | epsilon

   50 Bloque: LCURLY Variables Bloque1 RCURLY

   51 Bloque1: Estatuto SEMICOLON Bloque1
   52        | epsilon

   53 BloqueFuncion: LCURLY Variables BloqueFuncion1 BloqueFuncion2 RCURLY

   54 BloqueFuncion1: Estatuto SEMICOLON BloqueFuncion1
   55               | epsilon

   56 $@14: /* vacío */

   57 BloqueFuncion2: REGRESASYM Expresion $@14 SEMICOLON
   58               | epsilon

   59 Estatuto: Asignacion
   60         | Condicion
   61         | Ciclo
   62         | Escritura
   63         | Lectura
   64         | Llamada

   65 $@15: /* vacío */

   66 Llamada: IDENTIFICADOR $@15 Llamada1 Llamada2

   67 $@16: /* vacío */

   68 Llamada1: DOT IDENTIFICADOR $@16 Llamada1
   69         | epsilon

   70 $@17: /* vacío */

   71 Llamada2: LPAREN $@17 Args RPAREN
   72         | epsilon

   73 $@18: /* vacío */

   74 $@19: /* vacío */

   75 Asignacion: IDENTIFICADOR $@18 EQL $@19 Expresion

   76 Expresion: Exp Expresion1

   77 Expresion1: Expresion2 Exp
   78           | epsilon

   79 Expresion2: LSS
   80           | GTR
   81           | EQLEQL
   82           | NEQ

   83 $@20: /* vacío */

   84 Exp: Termino $@20 Exp1

   85 $@21: /* vacío */

   86 Exp1: PLUS $@21 Exp

   87 $@22: /* vacío */

   88 Exp1: MINUS $@22 Exp
   89     | epsilon

   90 $@23: /* vacío */

   91 Termino: Factor $@23 Termino1

   92 $@24: /* vacío */

   93 Termino1: TIMES $@24 Termino

   94 $@25: /* vacío */

   95 Termino1: SLASH $@25 Termino
   96         | epsilon

   97 $@26: /* vacío */

   98 $@27: /* vacío */

   99 Factor: LPAREN $@26 Expresion $@27 RPAREN
  100       | IDENTIFICADOR LBRACKET Expresion RBRACKET
  101       | Factor1 VarCteExp

  102 Factor1: PLUS
  103        | MINUS
  104        | epsilon

  105 VarCteExp: Llamada
  106          | ENTERO
  107          | BANDERA
  108          | TEXTO
  109          | DECIMAL

  110 Variables: Variable SEMICOLON Variables
  111          | epsilon

  112 VariablesObjetos: VariableObjeto SEMICOLON VariablesObjetos
  113                 | epsilon

  114 $@28: /* vacío */

  115 $@29: /* vacío */

  116 Variable: VARSYM Tipo $@28 IDENTIFICADOR $@29 Variable1

  117 Variable1: LBRACKET Expresion Variable2 RBRACKET
  118          | epsilon

  119 Variable2: COMMA Expresion Variable2
  120          | epsilon

  121 $@30: /* vacío */

  122 VariableObjeto: VARSYM Tipo $@30 IDENTIFICADOR

  123 $@31: /* vacío */

  124 Condicion: CONDICIONSYM LPAREN Expresion RPAREN $@31 Bloque Condicion1

  125 $@32: /* vacío */

  126 Condicion1: FALLOSYM $@32 Bloque
  127           | epsilon

  128 $@33: /* vacío */

  129 $@34: /* vacío */

  130 Ciclo: CICLOSYM $@33 LPAREN Ciclo1 COMMA Expresion $@34 COMMA Ciclo1 RPAREN Bloque

  131 $@35: /* vacío */

  132 Ciclo: HAZSYM $@35 Bloque MIENTRASSYM LPAREN Expresion RPAREN

  133 Ciclo1: Asignacion
  134       | epsilon

  135 $@36: /* vacío */

  136 Escritura: MUESTRASYM LPAREN Expresion $@36 EstatutosSalida RPAREN

  137 $@37: /* vacío */

  138 EstatutosSalida: COMMA Expresion $@37 EstatutosSalida
  139                | epsilon

  140 Lectura: LEESYM IDENTIFICADOR

  141 Main: PROGRAMASYM Bloque

  142 epsilon: /* vacío */


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ENTERO (258) 106
DECIMAL (259) 109
TEXTO (260) 108
NUMBER (261)
IDENTIFICADOR (262) 4 10 18 23 29 34 40 66 68 75 100 116 122 140
BANDERA (263) 107
PLUS (264) 86 102
MINUS (265) 88 103
TIMES (266) 93
SLASH (267) 95
LPAREN (268) 30 31 71 99 124 130 132 136
RPAREN (269) 30 31 71 99 124 130 132 136
LCURLY (270) 4 5 7 50 53
RCURLY (271) 4 5 7 50 53
LBRACKET (272) 100 117
RBRACKET (273) 100 117
SEMICOLON (274) 4 18 23 51 54 57 110 112
COMMA (275) 36 42 48 119 130 138
DOT (276) 68
EQL (277) 75
EQLEQL (278) 81
NEQ (279) 82
COLON (280)
LSS (281) 10 79
GTR (282) 10 80
CONDICIONSYM (283) 124
PROGRAMASYM (284) 141
FALLOSYM (285) 126
VARSYM (286) 116 122
MUESTRASYM (287) 136
MUESTRALINEASYM (288)
LEESYM (289) 140
BANDERASYM (290) 28
CARACTERSYM (291)
ENTEROSYM (292) 25
GRANENTEROSYM (293)
DECIMALSYM (294) 26
TEXTOSYM (295) 27
ARREGLOSYM (296)
MATRIZSYM (297)
CICLOSYM (298) 130
HAZSYM (299) 132
MIENTRASSYM (300) 132
FUNCIONSYM (301) 18 23
REGRESASYM (302) 57
INCLUIRSYM (303) 10
FALSOSYM (304)
VERDADEROSYM (305)
OBJETOSYM (306) 4
PRIVADOSYM (307) 5
PUBLICOSYM (308) 7


No terminales con las reglas donde aparecen

$accept (54)
    en la izquierda: 0
programa (55)
    en la izquierda: 1, en la derecha: 0
Objetos (56)
    en la izquierda: 2, en la derecha: 1
Objeto (57)
    en la izquierda: 4, en la derecha: 2
$@1 (58)
    en la izquierda: 3, en la derecha: 4
AtributosPrivados (59)
    en la izquierda: 5 6, en la derecha: 4
AtributosPublicos (60)
    en la izquierda: 7 8, en la derecha: 4
Librerias (61)
    en la izquierda: 9, en la derecha: 1
Libreria (62)
    en la izquierda: 10, en la derecha: 9 11
Libreria1 (63)
    en la izquierda: 11 12, en la derecha: 9
Funciones (64)
    en la izquierda: 13, en la derecha: 1 5
FuncionesObjetos (65)
    en la izquierda: 14, en la derecha: 7
Funcion (66)
    en la izquierda: 18 19, en la derecha: 13 18
$@2 (67)
    en la izquierda: 15, en la derecha: 18
$@3 (68)
    en la izquierda: 16, en la derecha: 18
$@4 (69)
    en la izquierda: 17, en la derecha: 18
FuncionObjeto (70)
    en la izquierda: 23 24, en la derecha: 14 23
$@5 (71)
    en la izquierda: 20, en la derecha: 23
$@6 (72)
    en la izquierda: 21, en la derecha: 23
$@7 (73)
    en la izquierda: 22, en la derecha: 23
Tipo (74)
    en la izquierda: 25 26 27 28 29, en la derecha: 18 23 34 40 116
    122
Params (75)
    en la izquierda: 30, en la derecha: 18
ParamsObjeto (76)
    en la izquierda: 31, en la derecha: 23
Param (77)
    en la izquierda: 34 35, en la derecha: 30 36
$@8 (78)
    en la izquierda: 32, en la derecha: 34
$@9 (79)
    en la izquierda: 33, en la derecha: 34
Param1 (80)
    en la izquierda: 36 37, en la derecha: 34
ParamObjeto (81)
    en la izquierda: 40 41, en la derecha: 31 42
$@10 (82)
    en la izquierda: 38, en la derecha: 40
$@11 (83)
    en la izquierda: 39, en la derecha: 40
ParamObjeto1 (84)
    en la izquierda: 42 43, en la derecha: 40
Args (85)
    en la izquierda: 45 46, en la derecha: 71
$@12 (86)
    en la izquierda: 44, en la derecha: 45
Args1 (87)
    en la izquierda: 48 49, en la derecha: 45 48
$@13 (88)
    en la izquierda: 47, en la derecha: 48
Bloque (89)
    en la izquierda: 50, en la derecha: 124 126 130 132 141
Bloque1 (90)
    en la izquierda: 51 52, en la derecha: 50 51
BloqueFuncion (91)
    en la izquierda: 53, en la derecha: 18 23
BloqueFuncion1 (92)
    en la izquierda: 54 55, en la derecha: 53 54
BloqueFuncion2 (93)
    en la izquierda: 57 58, en la derecha: 53
$@14 (94)
    en la izquierda: 56, en la derecha: 57
Estatuto (95)
    en la izquierda: 59 60 61 62 63 64, en la derecha: 51 54
Llamada (96)
    en la izquierda: 66, en la derecha: 64 105
$@15 (97)
    en la izquierda: 65, en la derecha: 66
Llamada1 (98)
    en la izquierda: 68 69, en la derecha: 66 68
$@16 (99)
    en la izquierda: 67, en la derecha: 68
Llamada2 (100)
    en la izquierda: 71 72, en la derecha: 66
$@17 (101)
    en la izquierda: 70, en la derecha: 71
Asignacion (102)
    en la izquierda: 75, en la derecha: 59 133
$@18 (103)
    en la izquierda: 73, en la derecha: 75
$@19 (104)
    en la izquierda: 74, en la derecha: 75
Expresion (105)
    en la izquierda: 76, en la derecha: 45 48 57 75 99 100 117 119
    124 130 132 136 138
Expresion1 (106)
    en la izquierda: 77 78, en la derecha: 76
Expresion2 (107)
    en la izquierda: 79 80 81 82, en la derecha: 77
Exp (108)
    en la izquierda: 84, en la derecha: 76 77 86 88
$@20 (109)
    en la izquierda: 83, en la derecha: 84
Exp1 (110)
    en la izquierda: 86 88 89, en la derecha: 84
$@21 (111)
    en la izquierda: 85, en la derecha: 86
$@22 (112)
    en la izquierda: 87, en la derecha: 88
Termino (113)
    en la izquierda: 91, en la derecha: 84 93 95
$@23 (114)
    en la izquierda: 90, en la derecha: 91
Termino1 (115)
    en la izquierda: 93 95 96, en la derecha: 91
$@24 (116)
    en la izquierda: 92, en la derecha: 93
$@25 (117)
    en la izquierda: 94, en la derecha: 95
Factor (118)
    en la izquierda: 99 100 101, en la derecha: 91
$@26 (119)
    en la izquierda: 97, en la derecha: 99
$@27 (120)
    en la izquierda: 98, en la derecha: 99
Factor1 (121)
    en la izquierda: 102 103 104, en la derecha: 101
VarCteExp (122)
    en la izquierda: 105 106 107 108 109, en la derecha: 101
Variables (123)
    en la izquierda: 110 111, en la derecha: 7 50 53 110
VariablesObjetos (124)
    en la izquierda: 112 113, en la derecha: 5 112
Variable (125)
    en la izquierda: 116, en la derecha: 110
$@28 (126)
    en la izquierda: 114, en la derecha: 116
$@29 (127)
    en la izquierda: 115, en la derecha: 116
Variable1 (128)
    en la izquierda: 117 118, en la derecha: 116
Variable2 (129)
    en la izquierda: 119 120, en la derecha: 117 119
VariableObjeto (130)
    en la izquierda: 122, en la derecha: 112
$@30 (131)
    en la izquierda: 121, en la derecha: 122
Condicion (132)
    en la izquierda: 124, en la derecha: 60
$@31 (133)
    en la izquierda: 123, en la derecha: 124
Condicion1 (134)
    en la izquierda: 126 127, en la derecha: 124
$@32 (135)
    en la izquierda: 125, en la derecha: 126
Ciclo (136)
    en la izquierda: 130 132, en la derecha: 61
$@33 (137)
    en la izquierda: 128, en la derecha: 130
$@34 (138)
    en la izquierda: 129, en la derecha: 130
$@35 (139)
    en la izquierda: 131, en la derecha: 132
Ciclo1 (140)
    en la izquierda: 133 134, en la derecha: 130
Escritura (141)
    en la izquierda: 136, en la derecha: 62
$@36 (142)
    en la izquierda: 135, en la derecha: 136
EstatutosSalida (143)
    en la izquierda: 138 139, en la derecha: 136 138
$@37 (144)
    en la izquierda: 137, en la derecha: 138
Lectura (145)
    en la izquierda: 140, en la derecha: 63
Main (146)
    en la izquierda: 141, en la derecha: 1
epsilon (147)
    en la izquierda: 142, en la derecha: 6 8 19 24 35 37 41 43 46 49
    52 55 58 69 72 78 89 96 104 111 113 118 120 127 134 139


estado 0

    0 $accept: . programa $end

    INCLUIRSYM  desplazar e ir al estado 1

    programa   ir al estado 2
    Librerias  ir al estado 3
    Libreria   ir al estado 4


estado 1

   10 Libreria: INCLUIRSYM . LSS IDENTIFICADOR GTR

    LSS  desplazar e ir al estado 5


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 6


estado 3

    1 programa: Librerias . Objetos Funciones Main

    OBJETOSYM  desplazar e ir al estado 7

    Objetos  ir al estado 8
    Objeto   ir al estado 9


estado 4

    9 Librerias: Libreria . Libreria1

    INCLUIRSYM  desplazar e ir al estado 1

    $default  reduce usando la regla 12 (Libreria1)

    Libreria   ir al estado 10
    Libreria1  ir al estado 11


estado 5

   10 Libreria: INCLUIRSYM LSS . IDENTIFICADOR GTR

    IDENTIFICADOR  desplazar e ir al estado 12


estado 6

    0 $accept: programa $end .

    $default  aceptar


estado 7

    4 Objeto: OBJETOSYM . IDENTIFICADOR $@1 LCURLY AtributosPrivados AtributosPublicos RCURLY SEMICOLON

    IDENTIFICADOR  desplazar e ir al estado 13


estado 8

    1 programa: Librerias Objetos . Funciones Main

    FUNCIONSYM  desplazar e ir al estado 14

    $default  reduce usando la regla 142 (epsilon)

    Funciones  ir al estado 15
    Funcion    ir al estado 16
    epsilon    ir al estado 17


estado 9

    2 Objetos: Objeto .

    $default  reduce usando la regla 2 (Objetos)


estado 10

   11 Libreria1: Libreria .

    $default  reduce usando la regla 11 (Libreria1)


estado 11

    9 Librerias: Libreria Libreria1 .

    $default  reduce usando la regla 9 (Librerias)


estado 12

   10 Libreria: INCLUIRSYM LSS IDENTIFICADOR . GTR

    GTR  desplazar e ir al estado 18


estado 13

    4 Objeto: OBJETOSYM IDENTIFICADOR . $@1 LCURLY AtributosPrivados AtributosPublicos RCURLY SEMICOLON

    $default  reduce usando la regla 3 ($@1)

    $@1  ir al estado 19


estado 14

   18 Funcion: FUNCIONSYM . Tipo $@2 IDENTIFICADOR $@3 Params BloqueFuncion SEMICOLON $@4 Funcion

    IDENTIFICADOR  desplazar e ir al estado 20
    BANDERASYM     desplazar e ir al estado 21
    ENTEROSYM      desplazar e ir al estado 22
    DECIMALSYM     desplazar e ir al estado 23
    TEXTOSYM       desplazar e ir al estado 24

    Tipo  ir al estado 25


estado 15

    1 programa: Librerias Objetos Funciones . Main

    PROGRAMASYM  desplazar e ir al estado 26

    Main  ir al estado 27


estado 16

   13 Funciones: Funcion .

    $default  reduce usando la regla 13 (Funciones)


estado 17

   19 Funcion: epsilon .

    $default  reduce usando la regla 19 (Funcion)


estado 18

   10 Libreria: INCLUIRSYM LSS IDENTIFICADOR GTR .

    $default  reduce usando la regla 10 (Libreria)


estado 19

    4 Objeto: OBJETOSYM IDENTIFICADOR $@1 . LCURLY AtributosPrivados AtributosPublicos RCURLY SEMICOLON

    LCURLY  desplazar e ir al estado 28


estado 20

   29 Tipo: IDENTIFICADOR .

    $default  reduce usando la regla 29 (Tipo)


estado 21

   28 Tipo: BANDERASYM .

    $default  reduce usando la regla 28 (Tipo)


estado 22

   25 Tipo: ENTEROSYM .

    $default  reduce usando la regla 25 (Tipo)


estado 23

   26 Tipo: DECIMALSYM .

    $default  reduce usando la regla 26 (Tipo)


estado 24

   27 Tipo: TEXTOSYM .

    $default  reduce usando la regla 27 (Tipo)


estado 25

   18 Funcion: FUNCIONSYM Tipo . $@2 IDENTIFICADOR $@3 Params BloqueFuncion SEMICOLON $@4 Funcion

    $default  reduce usando la regla 15 ($@2)

    $@2  ir al estado 29


estado 26

  141 Main: PROGRAMASYM . Bloque

    LCURLY  desplazar e ir al estado 30

    Bloque  ir al estado 31


estado 27

    1 programa: Librerias Objetos Funciones Main .

    $default  reduce usando la regla 1 (programa)


estado 28

    4 Objeto: OBJETOSYM IDENTIFICADOR $@1 LCURLY . AtributosPrivados AtributosPublicos RCURLY SEMICOLON

    PRIVADOSYM  desplazar e ir al estado 32

    $default  reduce usando la regla 142 (epsilon)

    AtributosPrivados  ir al estado 33
    epsilon            ir al estado 34


estado 29

   18 Funcion: FUNCIONSYM Tipo $@2 . IDENTIFICADOR $@3 Params BloqueFuncion SEMICOLON $@4 Funcion

    IDENTIFICADOR  desplazar e ir al estado 35


estado 30

   50 Bloque: LCURLY . Variables Bloque1 RCURLY

    VARSYM  desplazar e ir al estado 36

    $default  reduce usando la regla 142 (epsilon)

    Variables  ir al estado 37
    Variable   ir al estado 38
    epsilon    ir al estado 39


estado 31

  141 Main: PROGRAMASYM Bloque .

    $default  reduce usando la regla 141 (Main)


estado 32

    5 AtributosPrivados: PRIVADOSYM . LCURLY VariablesObjetos Funciones RCURLY

    LCURLY  desplazar e ir al estado 40


estado 33

    4 Objeto: OBJETOSYM IDENTIFICADOR $@1 LCURLY AtributosPrivados . AtributosPublicos RCURLY SEMICOLON

    PUBLICOSYM  desplazar e ir al estado 41

    $default  reduce usando la regla 142 (epsilon)

    AtributosPublicos  ir al estado 42
    epsilon            ir al estado 43


estado 34

    6 AtributosPrivados: epsilon .

    $default  reduce usando la regla 6 (AtributosPrivados)


estado 35

   18 Funcion: FUNCIONSYM Tipo $@2 IDENTIFICADOR . $@3 Params BloqueFuncion SEMICOLON $@4 Funcion

    $default  reduce usando la regla 16 ($@3)

    $@3  ir al estado 44


estado 36

  116 Variable: VARSYM . Tipo $@28 IDENTIFICADOR $@29 Variable1

    IDENTIFICADOR  desplazar e ir al estado 20
    BANDERASYM     desplazar e ir al estado 21
    ENTEROSYM      desplazar e ir al estado 22
    DECIMALSYM     desplazar e ir al estado 23
    TEXTOSYM       desplazar e ir al estado 24

    Tipo  ir al estado 45


estado 37

   50 Bloque: LCURLY Variables . Bloque1 RCURLY

    IDENTIFICADOR  desplazar e ir al estado 46
    CONDICIONSYM   desplazar e ir al estado 47
    MUESTRASYM     desplazar e ir al estado 48
    LEESYM         desplazar e ir al estado 49
    CICLOSYM       desplazar e ir al estado 50
    HAZSYM         desplazar e ir al estado 51

    $default  reduce usando la regla 142 (epsilon)

    Bloque1     ir al estado 52
    Estatuto    ir al estado 53
    Llamada     ir al estado 54
    Asignacion  ir al estado 55
    Condicion   ir al estado 56
    Ciclo       ir al estado 57
    Escritura   ir al estado 58
    Lectura     ir al estado 59
    epsilon     ir al estado 60


estado 38

  110 Variables: Variable . SEMICOLON Variables

    SEMICOLON  desplazar e ir al estado 61


estado 39

  111 Variables: epsilon .

    $default  reduce usando la regla 111 (Variables)


estado 40

    5 AtributosPrivados: PRIVADOSYM LCURLY . VariablesObjetos Funciones RCURLY

    VARSYM  desplazar e ir al estado 62

    $default  reduce usando la regla 142 (epsilon)

    VariablesObjetos  ir al estado 63
    VariableObjeto    ir al estado 64
    epsilon           ir al estado 65


estado 41

    7 AtributosPublicos: PUBLICOSYM . LCURLY Variables FuncionesObjetos RCURLY

    LCURLY  desplazar e ir al estado 66


estado 42

    4 Objeto: OBJETOSYM IDENTIFICADOR $@1 LCURLY AtributosPrivados AtributosPublicos . RCURLY SEMICOLON

    RCURLY  desplazar e ir al estado 67


estado 43

    8 AtributosPublicos: epsilon .

    $default  reduce usando la regla 8 (AtributosPublicos)


estado 44

   18 Funcion: FUNCIONSYM Tipo $@2 IDENTIFICADOR $@3 . Params BloqueFuncion SEMICOLON $@4 Funcion

    LPAREN  desplazar e ir al estado 68

    Params  ir al estado 69


estado 45

  116 Variable: VARSYM Tipo . $@28 IDENTIFICADOR $@29 Variable1

    $default  reduce usando la regla 114 ($@28)

    $@28  ir al estado 70


estado 46

   66 Llamada: IDENTIFICADOR . $@15 Llamada1 Llamada2
   75 Asignacion: IDENTIFICADOR . $@18 EQL $@19 Expresion

    EQL       reduce usando la regla 73 ($@18)
    $default  reduce usando la regla 65 ($@15)

    $@15  ir al estado 71
    $@18  ir al estado 72


estado 47

  124 Condicion: CONDICIONSYM . LPAREN Expresion RPAREN $@31 Bloque Condicion1

    LPAREN  desplazar e ir al estado 73


estado 48

  136 Escritura: MUESTRASYM . LPAREN Expresion $@36 EstatutosSalida RPAREN

    LPAREN  desplazar e ir al estado 74


estado 49

  140 Lectura: LEESYM . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 75


estado 50

  130 Ciclo: CICLOSYM . $@33 LPAREN Ciclo1 COMMA Expresion $@34 COMMA Ciclo1 RPAREN Bloque

    $default  reduce usando la regla 128 ($@33)

    $@33  ir al estado 76


estado 51

  132 Ciclo: HAZSYM . $@35 Bloque MIENTRASSYM LPAREN Expresion RPAREN

    $default  reduce usando la regla 131 ($@35)

    $@35  ir al estado 77


estado 52

   50 Bloque: LCURLY Variables Bloque1 . RCURLY

    RCURLY  desplazar e ir al estado 78


estado 53

   51 Bloque1: Estatuto . SEMICOLON Bloque1

    SEMICOLON  desplazar e ir al estado 79


estado 54

   64 Estatuto: Llamada .

    $default  reduce usando la regla 64 (Estatuto)


estado 55

   59 Estatuto: Asignacion .

    $default  reduce usando la regla 59 (Estatuto)


estado 56

   60 Estatuto: Condicion .

    $default  reduce usando la regla 60 (Estatuto)


estado 57

   61 Estatuto: Ciclo .

    $default  reduce usando la regla 61 (Estatuto)


estado 58

   62 Estatuto: Escritura .

    $default  reduce usando la regla 62 (Estatuto)


estado 59

   63 Estatuto: Lectura .

    $default  reduce usando la regla 63 (Estatuto)


estado 60

   52 Bloque1: epsilon .

    $default  reduce usando la regla 52 (Bloque1)


estado 61

  110 Variables: Variable SEMICOLON . Variables

    VARSYM  desplazar e ir al estado 36

    $default  reduce usando la regla 142 (epsilon)

    Variables  ir al estado 80
    Variable   ir al estado 38
    epsilon    ir al estado 39


estado 62

  122 VariableObjeto: VARSYM . Tipo $@30 IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 20
    BANDERASYM     desplazar e ir al estado 21
    ENTEROSYM      desplazar e ir al estado 22
    DECIMALSYM     desplazar e ir al estado 23
    TEXTOSYM       desplazar e ir al estado 24

    Tipo  ir al estado 81


estado 63

    5 AtributosPrivados: PRIVADOSYM LCURLY VariablesObjetos . Funciones RCURLY

    FUNCIONSYM  desplazar e ir al estado 14

    $default  reduce usando la regla 142 (epsilon)

    Funciones  ir al estado 82
    Funcion    ir al estado 16
    epsilon    ir al estado 17


estado 64

  112 VariablesObjetos: VariableObjeto . SEMICOLON VariablesObjetos

    SEMICOLON  desplazar e ir al estado 83


estado 65

  113 VariablesObjetos: epsilon .

    $default  reduce usando la regla 113 (VariablesObjetos)


estado 66

    7 AtributosPublicos: PUBLICOSYM LCURLY . Variables FuncionesObjetos RCURLY

    VARSYM  desplazar e ir al estado 36

    $default  reduce usando la regla 142 (epsilon)

    Variables  ir al estado 84
    Variable   ir al estado 38
    epsilon    ir al estado 39


estado 67

    4 Objeto: OBJETOSYM IDENTIFICADOR $@1 LCURLY AtributosPrivados AtributosPublicos RCURLY . SEMICOLON

    SEMICOLON  desplazar e ir al estado 85


estado 68

   30 Params: LPAREN . Param RPAREN

    IDENTIFICADOR  desplazar e ir al estado 20
    BANDERASYM     desplazar e ir al estado 21
    ENTEROSYM      desplazar e ir al estado 22
    DECIMALSYM     desplazar e ir al estado 23
    TEXTOSYM       desplazar e ir al estado 24

    $default  reduce usando la regla 142 (epsilon)

    Tipo     ir al estado 86
    Param    ir al estado 87
    epsilon  ir al estado 88


estado 69

   18 Funcion: FUNCIONSYM Tipo $@2 IDENTIFICADOR $@3 Params . BloqueFuncion SEMICOLON $@4 Funcion

    LCURLY  desplazar e ir al estado 89

    BloqueFuncion  ir al estado 90


estado 70

  116 Variable: VARSYM Tipo $@28 . IDENTIFICADOR $@29 Variable1

    IDENTIFICADOR  desplazar e ir al estado 91


estado 71

   66 Llamada: IDENTIFICADOR $@15 . Llamada1 Llamada2

    DOT  desplazar e ir al estado 92

    $default  reduce usando la regla 142 (epsilon)

    Llamada1  ir al estado 93
    epsilon   ir al estado 94


estado 72

   75 Asignacion: IDENTIFICADOR $@18 . EQL $@19 Expresion

    EQL  desplazar e ir al estado 95


estado 73

  124 Condicion: CONDICIONSYM LPAREN . Expresion RPAREN $@31 Bloque Condicion1

    IDENTIFICADOR  desplazar e ir al estado 96
    PLUS           desplazar e ir al estado 97
    MINUS          desplazar e ir al estado 98
    LPAREN         desplazar e ir al estado 99

    IDENTIFICADOR  [reduce usando la regla 142 (epsilon)]
    $default       reduce usando la regla 142 (epsilon)

    Expresion  ir al estado 100
    Exp        ir al estado 101
    Termino    ir al estado 102
    Factor     ir al estado 103
    Factor1    ir al estado 104
    epsilon    ir al estado 105


estado 74

  136 Escritura: MUESTRASYM LPAREN . Expresion $@36 EstatutosSalida RPAREN

    IDENTIFICADOR  desplazar e ir al estado 96
    PLUS           desplazar e ir al estado 97
    MINUS          desplazar e ir al estado 98
    LPAREN         desplazar e ir al estado 99

    IDENTIFICADOR  [reduce usando la regla 142 (epsilon)]
    $default       reduce usando la regla 142 (epsilon)

    Expresion  ir al estado 106
    Exp        ir al estado 101
    Termino    ir al estado 102
    Factor     ir al estado 103
    Factor1    ir al estado 104
    epsilon    ir al estado 105


estado 75

  140 Lectura: LEESYM IDENTIFICADOR .

    $default  reduce usando la regla 140 (Lectura)


estado 76

  130 Ciclo: CICLOSYM $@33 . LPAREN Ciclo1 COMMA Expresion $@34 COMMA Ciclo1 RPAREN Bloque

    LPAREN  desplazar e ir al estado 107


estado 77

  132 Ciclo: HAZSYM $@35 . Bloque MIENTRASSYM LPAREN Expresion RPAREN

    LCURLY  desplazar e ir al estado 30

    Bloque  ir al estado 108


estado 78

   50 Bloque: LCURLY Variables Bloque1 RCURLY .

    $default  reduce usando la regla 50 (Bloque)


estado 79

   51 Bloque1: Estatuto SEMICOLON . Bloque1

    IDENTIFICADOR  desplazar e ir al estado 46
    CONDICIONSYM   desplazar e ir al estado 47
    MUESTRASYM     desplazar e ir al estado 48
    LEESYM         desplazar e ir al estado 49
    CICLOSYM       desplazar e ir al estado 50
    HAZSYM         desplazar e ir al estado 51

    $default  reduce usando la regla 142 (epsilon)

    Bloque1     ir al estado 109
    Estatuto    ir al estado 53
    Llamada     ir al estado 54
    Asignacion  ir al estado 55
    Condicion   ir al estado 56
    Ciclo       ir al estado 57
    Escritura   ir al estado 58
    Lectura     ir al estado 59
    epsilon     ir al estado 60


estado 80

  110 Variables: Variable SEMICOLON Variables .

    $default  reduce usando la regla 110 (Variables)


estado 81

  122 VariableObjeto: VARSYM Tipo . $@30 IDENTIFICADOR

    $default  reduce usando la regla 121 ($@30)

    $@30  ir al estado 110


estado 82

    5 AtributosPrivados: PRIVADOSYM LCURLY VariablesObjetos Funciones . RCURLY

    RCURLY  desplazar e ir al estado 111


estado 83

  112 VariablesObjetos: VariableObjeto SEMICOLON . VariablesObjetos

    VARSYM  desplazar e ir al estado 62

    $default  reduce usando la regla 142 (epsilon)

    VariablesObjetos  ir al estado 112
    VariableObjeto    ir al estado 64
    epsilon           ir al estado 65


estado 84

    7 AtributosPublicos: PUBLICOSYM LCURLY Variables . FuncionesObjetos RCURLY

    FUNCIONSYM  desplazar e ir al estado 113

    $default  reduce usando la regla 142 (epsilon)
